# template-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresents.json  README.md  conanfile.txt
.github/workflows/: linux.yml  macos.yml  windows.yml
cmake/: CMakeUtils.cmake  CompilerWarnings.cmake  Doxygen.cmake
conan/: clang_linux  clang_macos  clang_windows  gcc_linux  gcc_macos  gcc_windows  msvc_windows
docker/: Base.Dockerfile  Dev.Dockerfile  Dockerfile.dev
include/: Example.hpp
src/: Example.cpp  main.cpp
tests/unit_tests/: CMakeLists.txt  ExampleTest.cpp
